--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
+boss-lock.json
+
+# Build folders
+**/Debug/
+**/Relese/
